pgs not showing up issue fixed

--- a/demostyle.css
+++ b/demostyle.css
@@ -68,8 +68,6 @@ p{
 
 
 /* Slide show */
-body,
-.wrap,
 #slider{
     position: relative;
     width: 388px;
@@ -82,7 +80,7 @@ body,
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow-x: hidden;
 }
 
